crear altas de experiencas

--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -24,7 +24,9 @@
 <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#proyectosModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
 <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
         </div>
+        <br><hr class="col-11">
       </div>
+      
     </div>
   </section>
   <app-modal-proyectos></app-modal-proyectos>
