--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -11,58 +11,20 @@
          <button type="submit" *ngIf="isLogged" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#experienciaModalAdd"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngFor="let experiencia of experiencias">
         <div class="col-3">
-          <a href="https://www.grupotejamax.com/" target="_blank">
-          <img src="assets/img/LogoTejamax.png" class="rounded-circle w-25" alt="logoShell"> 
-          </a>
-        <br>
-          <h5>Administración</h5>
-          <h6>02-02-2013 02-01.2022</h6>
+          <a [href]="experiencia.url" target="_blank"><img [src]="experiencia.imagen" class="rounded-circle w-25 imgExp"  [alt]="experiencia.puesto"></a> <br>
+          <h5>{{experiencia.puesto}}</h5>
+          <h6>{{experiencia.inicio | date:"dd-MM-yyyy"}} {{experiencia.fin  | date:"dd-MM-yyyy"}}</h6>
         </div>
         <div class="col-8">
-          <h4>Auxiliar Administrativo en TEJAMAX SA orientado al sector mantenimiento, trabajos con normas ISO 9000 y 9001 en SGC, experiencia en cotizaciones de compra, atención a clientes y proveedores, controles de producción y stock, programación de mantenimientos preventivos, manejo de indicadores de mantenimiento y consumos, manejo de Office, manejo de dinero y rendiciones de caja, conducción de vehículos livianos.</h4>
+          <h4>{{experiencia.descripcion}}</h4>
         </div>
-        <div class="col-1 p-0">
-          <!-- Button trigger modal --> 
-          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+        <div class="col-1">
+          <button type="button" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#experienciaModal" *ngIf="isLogged"><i class="fa-solid fa-pencil"></i></button>
+         <button type="submit" class="btn btn-close-white" *ngIf="isLogged"><i class="fa-solid fa-trash-can"></i></button>
         </div>
-      </div>
-      <br><hr class="col-11">
-      <div class="row">
-        <div class="col-3">
-          <a href="http://www.organizacionesraful.com/" target="_blank">
-            <img src="assets/img/LogoRaful.png" class="rounded-circle w-25" alt="logoShell"> 
-          </a>
-           <br>
-          <h5>Administración</h5>
-          <h6>05-10-2011 15-01-2013</h6>
-        </div>
-        <div class="col-8">
-          <h4>Administrativo en PREMOLDEADOS RAFUL., con experiencia en cotizaciones de venta, atención a clientes, controles de producción y stock, manejo de Office.</h4>
-        </div>
-         <div class="col-1 p-0">
-          <!-- Button trigger modal --> 
-          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
-         </div>
-      </div>
-      <br><hr class="col-11">
-      <div class="row">
-        <div class="col-3">
-          <img src="assets/img/LogoShell.png" class="rounded-circle w-25" alt="logoShell"> <br>
-          <h5>Vendedor de playa</h5>
-          <h6>01-03-2010 20-10-2011</h6>
-        </div>
-        <div class="col-8">
-          <h4>Vendedor de playa en ESTACIÓN DE SERVICIO SHELL Río Primero, con experiencia en manejo de dinero, rendición de caja, manejo de PC, atención a clientes.</h4>
-        </div>
-        <div class="col-1 p-0">
-          <!-- Button trigger modal --> 
-          <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#experienciaModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-         <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
-        </div>
+        <br><hr class="col-11">      
       </div>
     </div>
   </section>  
