--- a/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
+++ b/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
@@ -1,13 +1,13 @@
  <!-- Modal Experiencia -->
- <div class="modal fade" id="experienciaModalAdd" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade" id="experienciaModalAdd" tabindex="-1" aria-labelledby="experienciaModalAdd" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Agregar Experiencia</h5>
+          <h5 class="modal-title" id="experienciaModalAdd">Agregar Experiencia</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <form  #f="ngForm" (ngSubmit)="onCreate()" novalidate name="experienciaForm"> 
+            <form  #f="ngForm" (ngSubmit)="onCreate()" novalidate name="experienciaFormAdd"> 
                 <!-- formulario de experiencia-->
                 <div class="mb-3">
                   <label for="imagen" class="form-label">Agregar Logo de Empresa</label>
