--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -17,17 +17,19 @@
           <h5>{{experiencia.puesto}}</h5>
           <h6>{{experiencia.inicio | date:"dd-MM-yyyy"}} {{experiencia.fin  | date:"dd-MM-yyyy"}}</h6>
         </div>
-        <div class="col-8">
+        <div class="col-8" >
           <h4>{{experiencia.descripcion}}</h4>
         </div>
         <div class="col-1">
-          <button type="button" class="btn btn-close-white" data-bs-toggle="modal"  data-bs-target="#experienciaModalEd" *ngIf="isLogged" ><i class="fa-solid fa-pencil"></i></button>
+          <button type="button" class="btn btn-close-white" data-bs-toggle="modal"  data-bs-target="#experienciaModalEd" *ngIf="isLogged" (click)="idEdit(experiencia.id)"><i class="fa-solid fa-pencil"></i></button>
           <button type="submit" class="btn btn-close-white" *ngIf="isLogged" (click)="delete(experiencia.id)"><i class="fa-solid fa-trash-can"></i></button>
         </div>
         <br><hr class="col-11">      
       </div>
     </div>
   </section>  
-  <app-modal-experiencia></app-modal-experiencia>
+  <div *ngIf="isTrue"> 
+    <app-modal-experiencia></app-modal-experiencia>
+  </div>
 <app-modal-experiencia-add></app-modal-experiencia-add>
 
