--- a/src/app/modales/modal-educacion/modal-educacion.component.html
+++ b/src/app/modales/modal-educacion/modal-educacion.component.html
@@ -1,5 +1,5 @@
    <!-- Modal Educación -->
-   <div class="modal fade" id="educacionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+   <div class="modal fade text-black" id="educacionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
