--- a/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
+++ b/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
@@ -11,39 +11,44 @@
                 <!-- formulario de experiencia-->
                 <div class="mb-3">
                   <label for="imagen" class="form-label">Agregar Logo de Empresa</label>
-                  <input class="form-control" type="url" id="imagen" name="imagen" [(ngModel)]="imagen" placeholder="Ingrese URL">
+                  <input class="form-control" type="url" id="imagen" name="imagen" [(ngModel)]="form.imagen" placeholder="Ingrese URL">
                 </div>
                 <div class="mb-3">
                   <label for="url" class="form-label">Agregar URL de Empresa</label>
-                  <input type="url" class="form-control" id="url" name="url" [(ngModel)]="url" placeholder="Nueva URL">
+                  <input type="url" class="form-control" id="url" name="url" [(ngModel)]="form.url" placeholder="Nueva URL">
                 </div>
                 <div class="mb-3">
                   <label for="empresa" class="form-label">Agregar Empresa</label>
-                  <input type="text" class="form-control" id="empresa" name="empresa" [(ngModel)]="empresa" required placeholder="Empresa nueva">
+                  <input type="text" class="form-control" id="empresa" name="empresa" [(ngModel)]="form.empresa" required placeholder="Empresa nueva">
                 </div>
                 <div class="mb-3">
                   <label for="puesto" class="form-label">Agregar Cargo</label>
-                  <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="puesto" required placeholder="Nombre nuevo">
+                  <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="form.puesto" required placeholder="Nombre nuevo" #puesto="ngModel" [ngClass]="{ 'is-invalid': f.submitted && puesto.errors }">
+                </div>
+                <div *ngIf="f.submitted && puesto.errors" class="invalid-feedback">
+                  <div *ngIf="puesto.errors['required']">El nombre es requerido</div>
                 </div>
                 <div class="mb-3">
                   <label for="inicio" class="form-label">Agregar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="inicio">
+                  <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="form.inicio">
                 </div>
                 <div class="mb-3">
                   <label for="fin" class="form-label">Agregar Periodo Fin</label>
-                  <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="fin"> 
+                  <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="form.fin"> 
                 </div>
                 <div class="mb-3">
                     <label for="descripcion" class="form-label">Agregar Información de Cargo</label>
-                    <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="descripcion" rows="3"></textarea>
+                    <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="form.descripcion" rows="3"></textarea>
                 </div>
                 <div class="form-check form-switch">
                   <label class="form-check-label" for="esTrabajoActual">Es trabajo actual</label>
-                  <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" name="esTrabajoActual" [(ngModel)]="esTrabajoActual">
+                  <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" name="esTrabajoActual" [(ngModel)]="form.esTrabajoActual">
                 </div>
                 <div class="modal-footer">
+                  <button type="button" (click)="onReset(f)" class="btn btn-warning float-right">Reset</button>
                   <button type="submit" class="btn btnLogin" data-bs-dismiss="modal">Agregar</button>          
                 </div>
+
               </form>
           </div>
       </div>
