--- a/src/app/modales/modal-experiencia/modal-experiencia.component.html
+++ b/src/app/modales/modal-experiencia/modal-experiencia.component.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="experienciaModalEd">Editar Experiencia</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="cerrar()"></button>
       </div>
       <div class="modal-body">
         <!-- formulario de experiencia-->
