--- a/src/app/modales/modal-habilidades-add/modal-habilidades-add.component.html
+++ b/src/app/modales/modal-habilidades-add/modal-habilidades-add.component.html
@@ -4,22 +4,43 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Agregar Habilidad</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="limpiar()"></button>
         </div>
+        <!-- formulario de habilidad-->
+        <form [formGroup]="form" (ngSubmit)="form.valid && onCreate()" name="habilidadesForm"> 
         <div class="modal-body">
-            <form name="habilidadesForm"> 
-                <!-- formulario de habilidad-->
                 <div class="mb-3">
                   <label for="habilidadNombre" class="form-label">Agregar Habilidad</label>
-                  <input type="text" class="form-control" id="habilidadNombre" placeholder="Nombre nuevo">
+                  <input type="text" class="form-control" id="habilidadNombre" placeholder="Nombre nuevo" formControlName="habilidad" [(ngModel)]="habilidad" [ngClass]="{'is-invalid': Habilidad.errors && Habilidad.touched, 'is-valid': !Habilidad.errors && Habilidad.touched}">
+                  <div *ngIf="Habilidad.errors && Habilidad.touched">    
+                    <p *ngIf="Habilidad.hasError('required')" class="text-danger">
+                      La habilidad es requerida.
+                    </p>
+                  </div>
                 </div>
+
+                <div>
                   <label for="habilidadPorcentaje" class="form-label">Agregar Porcentaje de Manejo (Escala 0-100)</label>
-                  <input type="number" min="0" max="100" id="habilidadPorcentaje">
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Agregar</button>
-        </div>
-      </div>
+                  <input type="number" min="0" max="100" id="habilidadPorcentaje" formControlName="porcentaje" [(ngModel)]="porcentaje" [ngClass]="{'is-invalid': Porcentaje.errors && Porcentaje.touched, 'is-valid': !Porcentaje.errors && Porcentaje.touched}">
+                  <div *ngIf="Porcentaje.errors && Porcentaje.touched">    
+                    <p *ngIf="Porcentaje.hasError('required')" class="text-danger">
+                      El porcentaje es requerido.
+                    </p>
+                    <p *ngIf="Porcentaje.hasError('min')" class="text-danger">
+                      El porcentaje mínimo es 0.
+                    </p>
+                    <p *ngIf="Porcentaje.hasError('max')" class="text-danger">
+                      El porcentaje máximo es 100.
+                    </p>
+
+                  </div>
+                </div>
+              </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-ligth" (click)="limpiar()">Limpiar</button>
+                  <button type="submit" class="btn btnLogin">Agregar</button>
+                </div>
+              </form>
+            </div>
     </div>
   </div>
